<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Silencer</string>
    <string name="addTask">Add Task</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_task_pane">TaskPane</string>
    <string name="from_time">From:</string>
    <string name="to_time">To:</string>
    <string name="taskLabel">New Task</string>
    <string name="taskLabelEdit">Edit Task</string>
    <string name="during">During</string>
    <string name="afterDuring">After During</string>
    <string name="soundOn">Sound</string>
    <string name="setTime">Set</string>
    <string name="setTask">Set</string>
    <string name="title_activity_task_pane_edit">TaskPaneEdit</string>
    <string name="delete">Delete</string>
    <string name="time">Time</string>
    <string name="edit">Edit</string>
    <string name="enable">Enable</string>
    <string name="onTime">Set Time</string>
    <string name="start_service">Start service</string>
    <string name="new_rule">New rule</string>
</resources>
